# syrup-term

./: .gitmodules  CMakeLists.txt
cmake/: Findsyrup-buffer.cmake
example/: CMakeLists.txt  main.c
include/syrup/: array-list.h  colors.h  edit.h  form.h  line-edit.h  list-edit.h  term.h
src/: CMakeLists.txt  array-list.c  colors.c  confirm.c  form.c  input.c  line-edit.c  list-edit.c  list.c  private.c  private.h  select.c  term.c
